--- a/app/main/views/main/main.html
+++ b/app/main/views/main/main.html
@@ -11,13 +11,27 @@
         {{ end }}
         <:nav href="/about">About</:nav>
         <:user_templates:menu />
+        {{ store._blog_posts.each do |post| }}
+        {{ end }}
       </ul>
       <h3 class="text-muted">blog5</h3>
     </div>
 
     <:volt:notices />
 
-    {{ view main_path, 'body', {controller_group: 'main'} }}
+    <div class="col-md-8">
+      {{ view main_path, 'body', {controller_group: 'main'} }}
+    </div>
+
+    <div class="col-md-4">
+      <h4>Recent Posts</h4>
+        {{ recent_posts.each do |post| }}
+          <li>
+            <a href="/blog/{{ post._id }}">{{ post._title }} </a>
+          </li>
+        {{ end }}
+      </h4>
+    </div>
 
     <div class="footer">
       <p>&copy; Company {{ Time.now.year }}</p>
